# jira-cli

./: Cargo.toml  README.md
src/: config.rs  issue.rs  main.rs
