[package]
name = "jira"
version = "0.1.0"
authors = ["Cainã Costa <cainan.costa@gmail.com>"]

[[bin]]
name = "jira-cli"

[dependencies]
# HTTP Client
reqwest = "*"

# Deserialization
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { git = "https://github.com/cfcosta/toml-rs.git" , features = ["serde"] }

# CLI Handling
clap = "*"

# Logging
log = "*"

# Terminal Coloring
termion = "*"

# XDG path support
xdg-basedir = "*"
