[package]
name = "jira-cli"
version = "0.1.0"
authors = ["Cainã Costa <me@cfcosta.com>"]

[[bin]]
name = "jira-cli"

[dependencies]
# HTTP Client
reqwest = "^0.4"
hyper = "^0.10"

# Serialization
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"
toml = { git = "https://github.com/cfcosta/toml-rs.git" , features = ["serde"] }

# CLI Handling
clap = "^2.20"

# Logging
log = "^0.3"

# Terminal Coloring
termion = "^1.1"

# XDG path support
xdg-basedir = "^1.0"

# Word wrapping and hyphenation
textwrap = "^0.4"
hyphenation = "^0.6"
